[package]
name = "rainbow-road"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "fs", "sync"]}
reqwest = { version = "0.12" }
scraper = "0.19"
tokio-tar = "0.3.1"
async-compression = { version = "0.4", features = ["tokio", "brotli"]}
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = "thin"
strip = true